xine-lib (1-beta5)
  * new AV sync strategy (audio resample) for DXR3 users
  * improved fb driver with zero copy
  * fix the v4l plugin for lower resolution devices (webcam)
  * nvtv bugfixes
  * network code bugfixes (again long wait for some streams)
  * fix flac content detection (caused trouble to other demuxers)
  * OSS driver fixes (for cards using GETOPTR sync method)
        
xine-lib (1-beta4)
  * http input fixes
  * rtsp input fixes (remove long wait on end of stream)
  * build fixes
  * support for reference streams (.asx, .ram)

xine-lib (1-beta3)
  * PSX STR file demuxer
  * Westwood Studios AUD demuxer
  * PVA file demuxer
  * VOX file demuxer
  * NSF file demuxer
  * raw AC3 file demuxer
  * Goom plugin updated and acceleration added (mmx/ppc)
  * live rawdv playback (from device)
  * plugin loader improvements
  * basic oscilloscope post plugin
  * basic Fast Fourier Transform post plugin
  * CD digital audio input source and stream demuxer
  * Dialogic ADPCM audio decoder
  * reporting of unhandled codecs
  * NSF audio decoding via Nosefart
  * DVB plugin updated to new DVB API, DVB-C and DVB-T support
  * gnome-vfs input plugin added
  * external subtitles support. use either MRL syntax like 
    "test.mpg#subtitle:file.sub" or the frontend option.
  * updated VIDIX driver (image controls supported)
  * "mms over http" streaming protocol support
  * experimental v4l input plugin (analogue tv)
  * FLAC support (demuxer/decoder)
  * fixed yuy2 overlays on big-endian systems
  * experimental tvout support using nvtvd (configure --enable-nvtv)
	
xine-lib (1-beta2)
  * what a GOOM! post plugin
  * Digital TV (DVB) input plugin (experimental)
  * Interplay MVE playback system (file demuxer, video decoder, audio decoder)
  * support for real video 4.0 (through external real binary plugins)
  * quicktime binary-only codec support bugfixes
	
xine-lib (1-beta1)
  * updated libfaad
  * improved engine for seeking and slider positioning